Update low-latency pipeline article with Kafka 4.0+, Flink 1.19+, and comprehensive troubleshooting